--- a/frontend/src/components/Events/EventList/EventItem/EventItem.css
+++ b/frontend/src/components/Events/EventList/EventItem/EventItem.css
@@ -2,4 +2,22 @@
     margin: 1rem 0;
     padding: 1rem;
     border: 1px solid #01d1d1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.event__list-item h1 {
+    margin: 0;
+    font-size: 1.5rem;
+    color: #01d1d1;
+}
+
+.event__list-item h2 {
+    margin: 0;
+    font-size: 1rem;
+    color: black;
+}
+
+.event__list-item p {
+    margin: 0;
 }
